Fix footer alignment, remove ugly icon sizing

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,6 +1,7 @@
 footer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background: var(--main-fg-color);
 }
 
@@ -11,18 +12,20 @@ footer {
 }
 
 .content {
+  padding: 40px;
+  margin-left: 20px;
+}
+
+.footerLists {
   display: flex;
-  gap: 10%;
-  justify-content: center;
   flex-wrap: wrap;
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
+  justify-content: center;
+  gap: 0 150px;
+  margin-bottom: 30px;
 }
 
 .list {
   margin: 20px;
-  margin-left: 50px;
 }
 
 .list h3 {
@@ -35,7 +38,6 @@ footer {
   list-style-type: none;
   gap: 10px;
   font-size: 14px;
-  margin-bottom: 30px;
 }
 
 .list ul a {
@@ -48,23 +50,40 @@ footer {
 
 .line {
   align-self: center;
-  opacity: 0.3;
-  width: 80%;
+  width: 100%;
   margin-bottom: 30px;
+  opacity: 0.3;
 }
 
 .copyright {
   width: 100%;
-  align-self: center;
   text-align: center;
   font-size: 14px;
   color: var(--grey);
   margin-bottom: 30px;
-  word-wrap: break-word;
 }
 
-@media (max-width: 650px) {
+@media(max-width: 980px) {
+  .footerLists {
+    gap: 0 10%;
+  }
+}
+
+@media (max-width: 550px) {
+  .content {
+    padding: 10px;
+    margin-left: 0;
+  }
+
+  .list h3 {
+    text-align: center;
+  }
+
+  .list ul {
+    align-items: center;
+  }
+
   .copyright {
-    padding: 0 40px;
+    padding: 0;
   }
 }
