--- a/src/components/sections/Hero.module.css
+++ b/src/components/sections/Hero.module.css
@@ -15,14 +15,19 @@
   color: var(--neon-green2);
 }
 
-.bracket,
-.bracket svg {
-  position: relative;
-  top: 0.2em;
-}
-
 .bracket svg {
   fill: var(--neon-green2);
+  width: 1em;
+  height: 1em;
+  position: relative;
+}
+
+.bracketLeft svg {
+  left: 10px;
+}
+
+.bracketRight svg {
+  right: 10px;
 }
 
 .title {
@@ -44,10 +49,13 @@
   gap: 20px;
   margin-top: 14px;
   margin-left: 18px;
+  flex-wrap: wrap;
 }
 
 .icon {
   transition: filter 0.3s ease;
+  width: 24px;
+  height: 24px;
 }
 
 .icon svg {
